feat: Complete hard-coded Contact HTML page

--- a/src/template.html
+++ b/src/template.html
@@ -23,7 +23,7 @@
             <div class="section-content">
               <div class="main-title container-sm">
                 <h1>
-                  Menu
+                  Contact Us
                 </h1>
                 <p>
                   919 - 555 - 5555
@@ -32,157 +32,38 @@
             </div>
           </section>
           
-          <section id="menus" aria-label="menu-section" class="content">
-            <div class="container-sm">
-              <section class="menu-section">
-                <div class="menu-section__header">
-                  <h2>FIRST</h2>
-                </div>
-                <ul>
-                  <li class="menu-item">
-                    <div class="menu-item__heading">
-                      <p class="menu-item__heading menu-item__heading--name">
-                        Puff Puff
-                      </p>
-                    </div>
-                    <p class="menu-item__details--description">
-                      flour based snack fried in cholesterol-free heat healthy oil
-                    </p>
-                  </li>
-                  <li class="menu-item">
-                    <div class="menu-item__heading">
-                      <p class="menu-item__heading menu-item__heading--name">
-                        Fluffy Meat Pies
-                      </p>
-                    </div>
-                    <p class="menu-item__details--description">
-                      flour based buttery baked dough filled with beef, potato, carrot and seasonings to taste
-                    </p>
-                  </li>
-                  <li class="menu-item">
-                    <div class="menu-item__heading">
-                      <p class="menu-item__heading menu-item__heading--name">
-                        Scotch Egg
-                      </p>
-                    </div>
-                    <p class="menu-item__details--description">
-                      boiled egg wrapped in seasoned deep-fried turkey crust
-                    </p>
-                  </li>
+          <section id="hours" aria-label="info-section" class="content">
+            <div class="section-content">
+              <div class="hours-info container-sm">
+                <h2>
+                  Hours
+                </h2>
+                <ul class="hours">
+                  <li>Sunday: 10am - 5pm</li>
+                  <li>Monday: 7am - 7pm</li>
+                  <li>Tuesday: 7am - 7pm</li>
+                  <li>Wednesday: 7am - 7pm</li>
+                  <li>Thursday: 7am - 9pm</li>
+                  <li>Friday: 7am - 10pm</li>
+                  <li>Saturday: 8am - 10pm</li>
                 </ul>
-              </section>
-
-              <section class="menu-section">
-                <div class="menu-section__header">
-                  <h2>MAIN</h2>
-                </div>
-                <ul>
-                  <li class="menu-item">
-                    <div class="menu-item__heading">
-                      <p class="menu-item__heading menu-item__heading--name">
-                        Jollof Rice with Plantain
-                      </p>
-                    </div>
-                    <p class="menu-item__details--description">
-                      jollof rice served with plantain and meat
-                    </p>
-                  </li>
-                  <li class="menu-item">
-                    <div class="menu-item__heading">
-                      <p class="menu-item__heading menu-item__heading--name">
-                        Fufu
-                      </p>
-                    </div>
-                    <p class="menu-item__details--description">
-                      fufu made from fufu flour (yam, cassava, unripe plantain flour) can be served with your favorite soup or stew
-                    </p>
-                  </li>
-                  <li class="menu-item">
-                    <div class="menu-item__heading">
-                      <p class="menu-item__heading menu-item__heading--name">
-                        Egusi Soup
-                      </p>
-                    </div>
-                    <p class="menu-item__details--description">
-                      seafood. ground melon seeds cooked in a delicious sauce
-                    </p>
-                  </li>
-                  <li class="menu-item">
-                    <div class="menu-item__heading">
-                      <p class="menu-item__heading menu-item__heading--name">
-                        Lemonade
-                      </p>
-                    </div>
-                    <p class="menu-item__details--description">
-                      vegetarian, organic juices. enjoy this freshly squeezed lemon-based drink with sugar and water
-                    </p>
-                  </li>
-                </ul>
-              </section>
-
-              <section class="menu-section">
-                <div class="menu-section__header">
-                  <h2>SIDES</h2>
-                </div>
-                <ul>
-                  <li class="menu-item">
-                    <div class="menu-item__heading">
-                      <p class="menu-item__heading menu-item__heading--name">
-                        Small Side of Jollof Rice
-                      </p>
-                    </div>
-                    <p class="menu-item__details--description">
-                      Parboiled rice cooked in a tomato-based sauce
-                    </p>
-                  </li> 
-                  <li class="menu-item">
-                    <div class="menu-item__heading">
-                      <p class="menu-item__heading menu-item__heading--name">
-                        White Rice
-                      </p>
-                    </div>
-                    <p class="menu-item__details--description">
-                      parboiled rice
-                    </p>
-                  </li>
-                  <li class="menu-item">
-                    <div class="menu-item__heading">
-                      <p class="menu-item__heading menu-item__heading--name">
-                        Plantain
-                      </p>
-                    </div>
-                    <p class="menu-item__details--description">
-                      sliced fried ripe plantain. small - 6 pieces or large - 10 pieces
-                    </p>
-                  </li>
-                  <li class="menu-item">
-                    <div class="menu-item__heading">
-                      <p class="menu-item__heading menu-item__heading--name">
-                        Ijebu Garri
-                      </p>
-                    </div>
-                    <p class="menu-item__details--description">
-                      ijebu garri (white) is made out of cassava
-                    </p>
-                  </li>
-                  <li class="menu-item">
-                    <div class="menu-item__heading">
-                      <p class="menu-item__heading menu-item__heading--name">
-                        Moi-moi
-                      </p>
-                    </div>
-                    <p class="menu-item__details--description">
-                      seafood. you can never go wrong with our delicious moi-moi. wrapped grounded beans with vegetable oil and egg
-                    </p>
-                  </li>
-                </ul>
-              </section>
-
-              <section class="menu-section menu-section--text">
+              </div>
+            </div>
+          </section>
+          <hr>
+          <section id="location" aria-label="info-section" class="content">
+            <div class="section-content">
+              <div class="location-info container-sm">
+                <h2>
+                  Location
+                </h2>
                 <p>
-                  a 5% surcharge will be added to your check to help cover the cost of Raleigh/Durham business mandates
+                  5 Timed Place, Cary, North Carolina
                 </p>
-              </section>
+                <p>
+                  <strong>email:</strong> SidneysJollofBar@FakeEmail.com
+                </p>
+              </div>
             </div>
           </section>
           
