feat: Modules switch when tab is clicked, plus...
...tab is highlighted depending on which page is
active.

--- a/src/template.html
+++ b/src/template.html
@@ -8,9 +8,9 @@
 <body>
   <header>
     <nav class="tab-list">
-      <button id="home" class="cover">Home</button>
-      <button id="menu">Menu</button>
-      <button id="contact">Contact</button>
+      <button id="home" class="cover active">Home</button>
+      <button id="menu" class="cover">Menu</button>
+      <button id="contact" class="cover">Contact</button>
     </nav>
   </header>
   <div id="content">
