--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sidney's Jollof Rice Bar!</title>
+  <title>Sidney's Jollof Rice Bar!!!</title>
 </head>
 <body>
   <header>
